--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 # Site settings
 title: Dead Rooster
 description: > # this means to ignore newlines until "baseurl:"
-  Voici la nouvelle maison du blog culturo-sportivo-fun de Dead Rooster
-  dont la version précédente est disponible sur l'ancienne adresse
-  http://www.deadrooster.org 
+  Le fantastique nouveau blog 2.0
 baseurl: "" # the subpath of your site, e.g. /blog/
+brand_logo: /assets/images/logo-dead-rooster-120.png
 url: "http://blog.deadrooster.org" # the base hostname & protocol for your site
 twitter_username: dead__rooster
+facebook_pagename: DeadRoosterBlog
 destination: ../blog-deadrooster-org-gh-pages
 
 # Build settings
