--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,14 @@
 # Site settings
 title: Dead Rooster
 description: > # this means to ignore newlines until "baseurl:"
-  Le fantastique nouveau blog 2.0
+  Le fantastique nouveau blog 2.0. Les anciens posts sont toujours disponibles sur <a href='http://deadrooster.org'>deadrooster.org</a>.
 baseurl: "" # the subpath of your site, e.g. /blog/
 brand_logo: /assets/images/logo-dead-rooster-120.png
 url: "http://blog.deadrooster.org" # the base hostname & protocol for your site
 twitter_username: dead__rooster
 facebook_pagename: DeadRoosterBlog
 destination: ../blog-deadrooster-org-gh-pages
+postatic_url: "http://deadrooster.postatic.com"
 
 # Build settings
 markdown: kramdown
