Update config file

--- a/_config.yml
+++ b/_config.yml
@@ -22,5 +22,5 @@ markdown: kramdown
 permalink:  /:title.html
 exclude: [ 'bower_components', 'node_modules', 'bower.json', 'Gemfile', 'Gemfile.lock', 'Gruntfile.js', 'package.json', 'README.md', 'config.ru', 'vendor', 'Procfile', 'unicorn.rb', 'assets/images/s3', 'Rakefile' ]
 
-gems:
+plugins:
   - jekyll-sitemap
