--- a/package.json
+++ b/package.json
@@ -1,19 +1,24 @@
 {
   "name": "blog-deadrooster-org",
   "version": "0.0.1",
-  "dependencies": {
-    "grunt": "~0.4.1",
-    "grunt-contrib-less": "*",
-    "grunt-contrib-uglify": "*",
-    "grunt-contrib-copy": "*",
-    "grunt-contrib-coffee": "*",
-    "bower": "*",
-    "grunt-exec": "*"
-  },
   "engines": {
     "npm": "1.3.x"
   },
   "scripts": {
-    "bower:install": "bower install"
+    "grunt": "grunt"
+  },
+  "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.5.0",
+    "bootstrap": "^3.3.7",
+    "grunt": "^0.4.1",
+    "grunt-cli": "^1.3.2",
+    "grunt-contrib-coffee": "*",
+    "grunt-contrib-copy": "*",
+    "grunt-contrib-less": "*",
+    "grunt-contrib-uglify": "*",
+    "grunt-exec": "*",
+    "jquery": "^2.2.4",
+    "littlefoot": "^1.0.7",
+    "requirejs": "^2.3.6"
   }
 }
