--- a/_config_production.yml
+++ b/_config_production.yml
@@ -2,3 +2,5 @@
 environment: production
 
 url: "http://blog.deadrooster.org" # the base hostname & protocol for your site
+
+destination: "../TEMP-blog-deadrooster-org-gh-pages/blog-deadrooster-org/"
