--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
     "grunt": "grunt"
   },
   "devDependencies": {
-    "@fortawesome/fontawesome-free": "^5.5.0",
-    "bootstrap": "^4.1.3",
-    "grunt": "^0.4.1",
+    "@fortawesome/fontawesome-free": "^5.8.2",
+    "bootstrap": "^4.3.1",
+    "grunt": "^1.0.4",
     "grunt-cli": "^1.3.2",
-    "grunt-contrib-coffee": "*",
+    "grunt-contrib-coffee": "2.1.0",
     "grunt-contrib-copy": "*",
-    "grunt-contrib-uglify": "*",
-    "jquery": "^2.2.4"
+    "grunt-contrib-uglify": "4.0.1",
+    "jquery": "^3.4.1"
   }
 }
