--- a/_config_production.yml
+++ b/_config_production.yml
@@ -1,6 +1,4 @@
 # Site settings
 environment: production
 
-url: "http://blog.deadrooster.org" # the base hostname & protocol for your site
-
-destination: "../TEMP-blog-deadrooster-org-gh-pages/blog-deadrooster-org/"
+url: "https://blog.deadrooster.org" # the base hostname & protocol for your site
