--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "blog-deadrooster-org",
   "version": "0.0.1",
   "engines": {
-    "npm": "1.3.x"
+    "node": "10.14.2"
   },
   "scripts": {
     "grunt": "grunt"
